[package]
name = "taskblaster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
html5ever = "0.27.0"
markup5ever_rcdom = "0.3.0"
once_cell = "1.19.0"
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["default", "cookies", "multipart", "stream"] }
skyscraper = "0.6.3"
tokio = {version = "1.37.0", features = ["full"]}
